cabal-version:       >=1.10
name:                newlenses
version:             0.1.0.0
license-file:        LICENSE
author:              Asad Saeeduddin
maintainer:          masaeedu@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  default-extensions:  TypeOperators, GADTs, MultiParamTypeClasses, RankNTypes, FlexibleContexts, FlexibleInstances, ScopedTypeVariables, AllowAmbiguousTypes, ConstraintKinds, FunctionalDependencies, PolyKinds, DataKinds, UndecidableInstances, InstanceSigs, TypeFamilies
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Classes, Instances, Types
